[package]
name = "chameleon"
version = "0.1.0"
authors = [ "Chris Ohk <utilforever@gmail.com>" ]
edition = "2018"
description = "A simple library for use one Rust code in multi platforms such as WebAssembly, Android and iOS"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies